--- a/app/build.gradle
+++ b/app/build.gradle
@@ -257,4 +257,6 @@ dependencies {
     //视频缓存
     implementation 'com.danikula:videocache:2.7.1'
     implementation 'com.wx.wheelview:wheelview:1.3.3'//api:https://github.com/venshine/WheelView
+
+    implementation project(':blurringview')
 }
