--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
         tools:replace="android:icon,allowBackup">
         <!--        SplashScreenActivity-->
         <activity
-            android:name=".MainActivity"
+            android:name=".view.activity.SplashScreenActivity"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -73,6 +73,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".view.activity.exercise.landscape.MotorPatternActivity"
             android:launchMode="singleTask"
