--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -156,6 +156,11 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name=".view.activity.home.RankListActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".view.activity.login_other.SetUserXbActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
