--- a/app/build.gradle
+++ b/app/build.gradle
@@ -263,4 +263,6 @@ dependencies {
 
     implementation 'com.aliyun.dpa:oss-android-sdk:+'
     implementation 'com.aliyun.video.android:upload:+'
+    implementation 'com.aliyun.sdk.android:AliyunPlayer:4.5.0-full'
+    implementation 'com.alivc.conan:AlivcConan:0.9.5'
 }
