--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,6 +110,11 @@
             android:name=".view.map.SearchAddressActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing" />
+
+        <activity
+            android:name=".view.activity.mine.order.MineOrderEvaluateGoodsActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".view.activity.exercise.landscape.ClassicExerciseActivity"
             android:launchMode="singleTask"
