--- a/build.gradle
+++ b/build.gradle
@@ -5,17 +5,19 @@ buildscript {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         google()
         jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
-        maven { url "https://maven.google.com" }
+//        maven { url "https://maven.google.com" }
         maven { url "https://github.com/ChangYow/CYConsoleLib/raw/master" }
         maven { url "https://maven.aliyun.com/nexus/content/repositories/releases" }
+//        maven { url "https://maven.aliyun.com/repository/public" }
         maven() {
             url 'https://maven.aliyun.com/repository/releases'
         }
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:4.1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -30,10 +32,13 @@ allprojects {
         }
         google()
         jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
-        maven { url "https://maven.google.com" }
+//        maven { url "https://maven.google.com" }
         maven { url "https://github.com/ChangYow/CYConsoleLib/raw/master" }
+//        maven { url "https://maven.aliyun.com/repository/public" }
         maven { url "https://maven.aliyun.com/nexus/content/repositories/releases" }
+        maven { url  "https://dl.bintray.com//maven"}
         maven() {
             url 'https://maven.aliyun.com/repository/releases'
         }
