--- a/app/build.gradle
+++ b/app/build.gradle
@@ -262,7 +262,7 @@ dependencies {
     implementation 'com.github.1993hzw:Androids:1.3'
 //    implementation 'com.changyow:consolelib:1.1'
 
-    implementation 'com.aliyun.dpa:oss-android-sdk:+'
+    implementation 'com.aliyun.dpa:oss-android-sdk:2.9.6'
     implementation 'com.aliyun.video.android:upload:+'
     implementation 'com.aliyun.sdk.android:AliyunPlayer:4.5.0-full'
     implementation 'com.alivc.conan:AlivcConan:0.9.5'
