--- a/app/build.gradle
+++ b/app/build.gradle
@@ -261,7 +261,7 @@ dependencies {
 //    implementation 'com.changyow:consolelib:1.1'
 
     implementation 'com.aliyun.dpa:oss-android-sdk:2.9.6'
-    implementation 'com.aliyun.video.android:upload:+'
+    implementation 'com.aliyun.video.android:upload:1.6.0'
     implementation 'com.aliyun.sdk.android:AliyunPlayer:4.5.0-full'
     implementation 'com.alivc.conan:AlivcConan:0.9.5'
 
