--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -348,6 +348,10 @@
 
             android:screenOrientation="portrait" />
         <activity
+            android:name=".view.activity.login_other.LoginBindPhoneActivity"
+
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".view.activity.mine.order.AddressEditActivity"
 
             android:screenOrientation="portrait" />
